2022-11-24T16:06:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3542157240 # 1061
* notice: last 14d: unq all: 8 40
* notice: prev accum: outdated-unq outdated-all / unq all: 623 1930 / 642 1969
* notice: next accum: outdated-unq outdated-all / unq all: 623 1930 / 643 1970
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-11-24]

2022-11-24T08:07:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3538780945 # 1060
* notice: last 14d: unq all: 7 39
* notice: prev accum: outdated-unq outdated-all / unq all: 623 1930 / 641 1968
* notice: next accum: outdated-unq outdated-all / unq all: 623 1930 / 642 1969
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-24]

2022-11-24T00:34:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3536708425 # 1059
* notice: last 14d: unq all: 7 38
* notice: prev accum: outdated-unq outdated-all / unq all: 623 1930 / 641 1967
* notice: next accum: outdated-unq outdated-all / unq all: 623 1930 / 641 1968
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [] / [2022-11-23]

2022-11-23T16:06:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3533723642 # 1058
* notice: last 14d: unq all: 7 37
* notice: prev accum: outdated-unq outdated-all / unq all: 623 1930 / 640 1965
* notice: next accum: outdated-unq outdated-all / unq all: 623 1930 / 641 1967
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-11-23]

2022-11-23T08:07:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3530260280 # 1057
* notice: last 14d: unq all: 6 35