@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-24T16:06:53Z",
-  "count" : 2,
-  "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "timestamp" : "2022-11-25T00:31:22Z",
+  "count" : 4,
+  "count_minmax" : [ 1, 4 ],
+  "count_decinc" : [ -0, +4 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
