@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-24T16:06:53Z",
+  "timestamp" : "2022-11-25T00:31:22Z",
   "count_outdated" : 1930,
   "uniques_outdated" : 623,
-  "count" : 1970,
+  "count" : 1972,
   "uniques" : 643,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-11-24T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
     }
