@@ -1,5 +1,5 @@
 {
-  "count": 40,
+  "count": 42,
   "uniques": 8,
   "clones": [
     {
@@ -59,7 +59,7 @@
     },
     {
       "timestamp": "2022-11-24T00:00:00Z",
-      "count": 2,
+      "count": 4,
       "uniques": 2
     }
   ]
