@@ -1,3 +1,11 @@
+2022-11-25T00:31:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3544423507 # 1062
+* notice: last 14d: unq all: 8 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 623 1930 / 643 1970
+* notice: next accum: outdated-unq outdated-all / unq all: 623 1930 / 643 1972
+* notice: prev exec diff / last date diff / accum: unq all: +0 +2 -0 -0 / +2 +4 -0 -0 / 2 4
+* notice: removed / changed dates: [] / [2022-11-24]
+
 2022-11-24T16:06:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3542157240 # 1061
 * notice: last 14d: unq all: 8 40
